# C-contests

./: HWF.c  README.md
hwf/: HWF.c  fibonacci.c  fibonacci.h
hwh/: Makefile  README.md  hashtable.h  hwh.c  hwh.h  main.c
hwh/contest_vers/: hwh_contest.c
hwh/hashtable/: hashtable.c  hashtable.h
hwh/lib/hashtable/: CMakeLists.txt  hashtable.c  hashtable.h
hwh/lvl_1-2/: CMakeLists.txt  Makefile  README.md  hashtable.h  hwh.c  hwh_lvl_1-2  main.c  tests_time.txt
hwh/lvl_1-2/my_tests/answers/: ans_8.txt
hwh/lvl_1-2/src/: main.c
hwh/lvl_1-2/tests/: test1.txt  test4.txt  test5.txt  test6.txt  test7.txt  test9.txt
hwh/lvl_3/: CMakeLists.txt  Makefile  README.md  hashtable.h  hwh_quads.c  main.c  tests_time.txt
hwh/lvl_3/include/: strs_pair.h
hwh/lvl_3/src/: main.c
hwh/lvl_3/strs_pair/: strs_pair.c  strs_pair.h
hwh/lvl_3/tests/: test_10.txt
hwh/lvl_3/tests/answers/: ans_10.txt
hwh/lvl_3/text_buffer/: buffer.c  buffer.h
hwh/tests/: test1.txt  test2.txt  test3.txt  test8.txt
